--- a/Client/index.html
+++ b/Client/index.html
@@ -2,8 +2,9 @@
 <html ng-app="contactsApp">
 
 <head>
-    <title>Node-Mongo</title>
+    <title>List</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 
 <body ng-controller="contactsController">
